--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,11 +22,11 @@ jobs:
       run: |
        sudo apt-get update
        sudo apt-get install -y google-chrome-stable
-    - name: Restore dependencies
+    - name: Install dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Run Test
       env:
        CHROMEWEBDRIVER: /usr/bin/google-chrome
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --verbosity normal
