--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,10 +18,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
-    - name: Install Chrome
-      run: |
-       sudo apt-get update
-       sudo apt-get install -y google-chrome-stable
+    #- name: Install Chrome
+     # run: |
+      # sudo apt-get update
+      # sudo apt-get install -y google-chrome-stable
     - name: Install dependencies
       run: dotnet restore
     - name: Build
